# ngx-top

./: .gitignore  README.md  build.sh  default.nix  docker-build.sh  docker-compose.yml  ngx-top.cabal  ngx-top.nix  shell.nix  stack.yaml  upload.sh
app/: Generator.hs
log-parser/: README.md  log-parser.cabal
log-parser/bench/: Main.hs
log-parser/src/Log/: Nginx.hs
log-parser/src/Log/Nginx/: Combined.hs  Common.hs  Detect.hs  Gateway.hs  Pretty.hs  Types.hs
log-parser/test/: NginxSpec.hs
log-parser/test/Nginx/: CombinedSpec.hs  GatewaySpec.hs
ngx-top/: ngx-top.cabal
ngx-top/app/: Main.hs
ngx-top/src/: NgxTop.hs  Types.hs
ngx-top/src/NgxTop/: Bots.hs  Generator.hs  UI.hs
nix/: sources.json
src/: GeoIP.hs  NgxTop.hs  Types.hs
src/NgxTop/: Bots.hs  Generator.hs  UI.hs
