name: log-parser
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Piotr Bogdan
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/log-parser#readme
synopsis: Parser for various access log files.
description:
    Please see README.md
category: Web
author: Piotr Bogdan

source-repository head
    type: git
    location: https://github.com/pbogdan/log-parser

library
    exposed-modules:
        Log.Nginx.Combined
        Log.Nginx.Common
        Log.Nginx.Detect
        Log.Nginx.Gateway
        Log.Nginx.Pretty
        Log.Nginx.Types
    build-depends:
        attoparsec >=0.13.1.0 && <0.14,
        base >=4.7 && <5,
        bytestring >=0.10.8.1 && <0.11,
        iproute >=1.7.1 && <1.8,
        protolude >=0.1.10 && <0.2,
        time >=1.6.0.1 && <1.7,
        uri-bytestring >=0.2.2.0 && <0.3
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: src
    ghc-options: -Wall

test-suite log-parser-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Nginx.GatewaySpec
        Nginx.CombinedSpec
    build-depends:
        QuickCheck >=2.9.0 && <2.10,
        bytestring >=0.10.8.1 && <0.11,
        exceptions >=0.8.3 && <0.9,
        hspec >=2.3.0 && <2.4,
        lens ==4.15.*,
        protolude >=0.1.10 && <0.2,
        quickcheck-instances >=0.3.12 && <0.4,
        base >=4.9.0.0 && <4.10,
        time >=1.6.0.1 && <1.7,
        iproute >=1.7.1 && <1.8,
        log-parser >=0.1.0.0 && <0.2,
        uri-bytestring >=0.2.2.0 && <0.3
    default-extensions: NoImplicitPrelude
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

benchmark bench
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base >=4.9.0.0 && <4.10,
        attoparsec >=0.13.1.0 && <0.14,
        bytestring >=0.10.8.1 && <0.11,
        criterion >=1.1.1.0 && <1.2,
        log-parser >=0.1.0.0 && <0.2,
        protolude >=0.1.10 && <0.2
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: bench
    ghc-options: -Wall
