name: ngx-top
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Piotr Bogdan
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/ngx-top#readme
synopsis: Real-time stats for nginx logs.
description:
    Please see README.md
category: Web
author: Piotr Bogdan
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/pbogdan/ngx-top

library
    exposed-modules:
        NgxTop
        NgxTop.Bots
        NgxTop.Generator
        NgxTop.UI
        Types
    other-modules:
        GeoIP
    build-depends:
        base >=4.7 && <5,
        attoparsec >=0.13.1.0 && <0.14,
        brick ==0.17.*,
        containers >=0.5.7.1 && <0.6,
        foldl >=1.2.3 && <1.3,
        iproute >= 1.7 && < 1.8,
        lens >=4.15.1 && <4.16,
        log-parser >=0.1.0.0 && <0.2,
        pipes >=4.3.2 && <4.4,
        pipes-attoparsec >=0.5.1.4 && <0.6,
        pipes-bytestring >=2.1.4 && <2.2,
        pipes-group >=1.0.6 && <1.1,
        pipes-parse >=3.0.8 && <3.1,
        protolude >=0.1.6 && <0.2,
        stm >=2.4.4.1 && <2.5,
        vty ==5.15.*,
        tailfile-hinotify >=1.0.0.2 && <1.1,
        unordered-containers >=0.2.7.2 && <0.3,
        uri-bytestring >=0.2.2.1 && <0.3,
        file-embed >=0.0.10 && < 0.0.11,
        geoip2 >= 0.2.0.0 && < 0.3.0,
        bytestring >=0.10.8.1 && <0.11,
        safe-exceptions >= 0.1.4.0 && < 0.1.5,
        QuickCheck >=2.9.0 && <2.10,
        quickcheck-instances >=0.3.12 && <0.4,
        time >=1.6.0.1 && <1.7,
        stringsearch >= 0.3.6.6 && < 0.4.0
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src
    ghc-options: -Wall

executable ngx-top
    main-is: Main.hs
    build-depends:
        base >=4.9.1.0 && <4.10,
        ngx-top >=0.1.0.0 && <0.2,
        protolude >=0.1.6 && <0.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: app
    ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-N -M256M"

executable ngx-top-gen
    main-is: Generator.hs
    build-depends:
        base >=4.9.1.0 && <4.10,
        ngx-top >=0.1.0.0 && <0.2,
        protolude >=0.1.6 && <0.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: app
    ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-N -M256M"

test-suite ngx-top-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9.1.0 && <4.10,
        ngx-top >=0.1.0.0 && <0.2,
        protolude >=0.1.6 && <0.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: test
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
